--- a/index.html
+++ b/index.html
@@ -2,73 +2,113 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<title>Velho Oeste Online — CODv8</title>
+<title>Velho Oeste Online — CODv9</title>
 
 <style>
+/* ===== BASE ===== */
 body{
   margin:0;
   font-family: monospace;
-  background:#1e1e1e;
-  color:#eee;
+  background:#2b1d14;
+  color:#f5e6c8;
   display:flex;
 }
 aside{
   width:240px;
-  background:#111;
+  background:#1a120b;
   padding:10px;
-  border-right:2px solid #333;
+  border-right:3px solid #5a3e2b;
 }
 .avatar{
   width:144px;
   height:144px;
-  background:#333;
+  background:#3a2618;
   display:flex;
   align-items:center;
   justify-content:center;
-  margin-bottom:10px;
-  border-radius:8px;
+  margin-bottom:12px;
+  border-radius:10px;
   margin:auto;
+  border:2px solid #7a5236;
 }
+
+/* ===== TABS ===== */
 .tabs button{
   width:100%;
-  margin-bottom:5px;
-  background:#222;
-  border:1px solid #444;
-  color:#eee;
+  margin-bottom:6px;
+  background:#2f1f14;
+  border:1px solid #6b4a33;
+  color:#f0d9a6;
   cursor:pointer;
+  padding:6px;
 }
-.panel{display:none;}
+.tabs button:hover{background:#3e2a1c;}
+
+.panel{display:none;font-size:13px;}
 .panel.active{display:block;}
+
+/* ===== BARRAS ===== */
+.bar{
+  background:#120b06;
+  border:1px solid #6b4a33;
+  border-radius:6px;
+  height:12px;
+  margin:4px 0 8px;
+  overflow:hidden;
+}
+.fill{
+  height:100%;
+  width:0%;
+  transition:width .4s;
+}
+.energy{background:#4caf50;}
+.drunk{background:#c49b3a;}
+.xp{background:#4a90e2;}
+
+/* ===== MAIN ===== */
 main{
   flex:1;
   display:flex;
   flex-direction:column;
 }
 header{
-  background:#111;
+  background:#1c120b;
   padding:10px;
   display:flex;
-  gap:10px;
+  gap:8px;
   flex-wrap:wrap;
+  border-bottom:3px solid #5a3e2b;
 }
 header button{
-  background:#222;
-  border:1px solid #444;
-  color:#eee;
-  padding:6px 10px;
+  background:#3a2618;
+  border:1px solid #7a5236;
+  color:#f5e6c8;
+  padding:6px 12px;
   cursor:pointer;
 }
+header button:hover{background:#4a321f;}
+
 section{
   padding:15px;
   display:none;
 }
 section.active{display:block;}
+section button{
+  background:#2f1f14;
+  border:1px solid #6b4a33;
+  color:#f0d9a6;
+  padding:6px 10px;
+  margin:4px 0;
+  cursor:pointer;
+}
+section button:hover{background:#3e2a1c;}
+
 #log{
   flex:1;
-  background:#000;
+  background:#0e0906;
   padding:10px;
   overflow-y:auto;
-  border-top:2px solid #333;
+  border-top:3px solid #5a3e2b;
   font-size:13px;
 }
 </style>
@@ -78,7 +118,7 @@ section.active{display:block;}
 
 <aside>
   <div class="avatar">
-    <img src="IMG/avatar.png" width="130" height="130">
+    <img src="IMG/avatar.png" width="130">
   </div>
 
   <div class="tabs">
@@ -88,9 +128,16 @@ section.active{display:block;}
 
   <div id="status" class="panel active">
     <div>Nível: <span id="nivel"></span></div>
+
     <div>XP: <span id="xp"></span>/<span id="xpProx"></span></div>
+    <div class="bar"><div id="barXP" class="fill xp"></div></div>
+
     <div>Energia: <span id="energia"></span>%</div>
+    <div class="bar"><div id="barEnergia" class="fill energy"></div></div>
+
     <div>Bebedeira: <span id="bebedeira"></span>%</div>
+    <div class="bar"><div id="barBebedeira" class="fill drunk"></div></div>
+
     <div>Status: <span id="statusTxt"></span></div>
     <div>💰 $<span id="dinheiro"></span></div>
     <div>🏦 $<span id="bancoValor"></span></div>
@@ -196,6 +243,10 @@ function atualizar(){
   bancoValor.textContent=player.banco;
   statusTxt.textContent=player.status;
 
+  barEnergia.style.width=player.energia+"%";
+  barBebedeira.style.width=player.bebedeira+"%";
+  barXP.style.width=(player.xp/player.xpProx*100)+"%";
+
   eqArma.textContent=player.equip.arma?"Equipada":"Nenhuma";
   eqBota.textContent=player.equip.bota?"Equipada":"Nenhuma";
   eqChapeu.textContent=player.equip.chapeu?"Equipado":"Nenhum";
@@ -256,7 +307,6 @@ function subornoPreso(){
   player.presoAte=0;
   log("🔓 Suborno aceito.");
 }
-
 function beber(){
   if(player.dinheiro<15){semDinheiro();return;}
   player.dinheiro-=15;
@@ -271,7 +321,6 @@ function leite(){
   player.bebedeira=Math.max(0,player.bebedeira-15);
   log("🥛 Bebeu leite.");
 }
-
 function depositar(){
   let v=+valorBanco.value;
   if(v>0 && player.dinheiro>=v){
@@ -297,10 +346,8 @@ function comprarEquip(i){
   log("🛠️ Comprou "+i+".");
 }
 
-/* ===== LOOP 1 — HUD & PRISÃO (1s) ===== */
+/* ===== LOOPS ===== */
 setInterval(atualizar,1000);
-
-/* ===== LOOP 2 — REGEN (5s) ===== */
 setInterval(()=>{
   if(player.status==="Livre"){
     player.energia=Math.min(100,player.energia+1);
@@ -309,7 +356,7 @@ setInterval(()=>{
 },5000);
 
 /* ===== INIT ===== */
-log("🤠 CODv8 carregado.");
+log("🤠 CODv9 carregado.");
 atualizar();
 </script>
 
