--- a/index.html
+++ b/index.html
@@ -375,7 +375,14 @@ setInterval(()=>{
 },5000);
 
 /* ===== INIT ===== */
-log("🤠 CODv9 carregado.");
+log("🏜️ PALO SECO 🏜️");
+log("");
+log("Cuidado.");
+log("Cada passo conta.");
+log("Cada ato pesa.");
+log("");
+log("🌵 Bem vindo.");
+log("");
 atualizar();
 </script>
 
