--- a/index.html
+++ b/index.html
@@ -4,193 +4,14 @@
 <meta charset="UTF-8">
 <title>Palo Seco</title>
 
-<style>
-/* ===== BASE ===== */
-body{
-  margin:0;
-  font-family: monospace;
-  background:#2b1d14;
-  color:#f5e6c8;
-  display:flex;
-}
-aside{
-  width:240px;
-  background:#1a120b;
-  padding:10px;
-  border-right:3px solid #5a3e2b;
-}
-.avatar{
-  width:144px;
-  height:144px;
-  background:#3a2618;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 50;
-  border-radius:10px;
-  border:2px solid #7a5236;
-}
-
-/* ===== NOME PERSONAGEM ===== */
-h3{
-  text-align:center;
-  margin-top:0;
-  margin-bottom:10px;
-}
-
-/* ===== TÍTULO ===== */
-.titulo{
-  text-align: center;
-  margin-bottom:20px;
-  margin-top: 10px;
-}
-
-/* ===== TABS ===== */
-.tabs button{
-  width:100%;
-  margin-bottom:6px;
-  background:#2f1f14;
-  border:1px solid #6b4a33;
-  color:#f0d9a6;
-  cursor:pointer;
-  padding:6px;
-}
-.tabs button:hover{background:#3e2a1c;}
-
-.panel{display:none;font-size:13px;}
-.panel.active{display:block;}
-
-/* ===== BARRAS ===== */
-.bar{
-  background:#120b06;
-  border:1px solid #6b4a33;
-  border-radius:6px;
-  height:12px;
-  margin:4px 0 8px;
-  overflow:hidden;
-}
-.fill{
-  height:100%;
-  width:0%;
-  transition:width .4s;
-}
-.energy{background:#4caf50;}
-.drunk{background:#c49b3a;}
-.xp{background:#4a90e2;}
-
-/* ===== MAIN ===== */
-main{
-  flex:1;
-  display:flex;
-  flex-direction:column;
-}
-h1{
-  margin:10px;
-  font-size:60px;
-  text-align:center;
-  color:#f0d9a6;
-}
-
-
-header{
-  background:#1c120b;
-  padding:10px;
-  display:flex;
-  gap:8px;
-  flex-wrap:wrap;
-  border-bottom:3px solid #5a3e2b;
-  border-top: 3px solid #5a3e2b;
-  
-}
-header button{
-  background:#7a5236;
-  border:1px solid #7a5236;
-  color:#f5e6c8;
-  padding:6px 12px;
-  cursor:pointer;
-}
-header button:hover{background:#4a321f;}
-
-section{
-  padding:15px;
-  display:none;
-}
-section.active{display:block;}
-section button{
-  background:#2f1f14;
-  border:1px solid #6b4a33;
-  color:#f0d9a6;
-  padding:6px 10px;
-  margin:4px 0;
-  cursor:pointer;
-}
-section button:hover{background:#3e2a1c;}
-
-#log{
-  height:600px;            /* ALTURA FIXA */
-  background:#0e0906;
-  padding:10px;
-  overflow-y:auto;         /* SCROLL VERTICAL */
-  overflow-x:hidden;
-  border-top:3px solid #5a3e2b;
-  font-size:13px;
-}
-
-#log::-webkit-scrollbar{
-  width:10px;
-}
-#log::-webkit-scrollbar-thumb{
-  background:#6b4a33;
-}
-#log::-webkit-scrollbar-track{
-  background:#120b06;
-}
-
-
-
-/* ===== LOG UX ===== */
-.log-line{
-  opacity:0.35;
-  transition:opacity .3s;
-}
-
-.log-line:nth-child(1){
-  opacity:1;
-  color:#ffe7b3;
-  font-weight:bold;
-  text-shadow:0 0 6px rgba(255,220,150,.6);
-}
-
-.log-line:nth-child(2){
-  opacity:0.75;
-}
-
-.log-line:nth-child(3){
-  opacity:0.55;
-}
-
-/* ===== FOOTER ===== */
-footer {
-  text-align: center;
-  padding: 10px;
-  background-color: #1a120b;
-  color: #f5e6c8;
-  border-top: 3px solid #5a3e2b;
-  font-size: 12px;
-}
-
-</style>
+<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
 <aside>
   <div class="avatar">
-    <img id="avatarImg" src="IMG/avatar.png" width="130">
+    <img id="avatarImg" src="img/avatar.png" width="130">
   </div>
 
   <h3>⭐Belchior Bill⭐</h3>
@@ -228,401 +49,53 @@ footer {
 </aside>
 
 <main>
-
   <h1>PALOSECO</h1>
-<header>
-  <button onclick="abrir('trabalhos')">Trabalhos</button>
-  <button onclick="abrir('saloon')">Saloon</button>
-  <button onclick="abrir('banco')">Banco</button>
-  <button onclick="abrir('xerife')">Xerife</button>
-  <button onclick="abrir('loja')">Loja</button>
-</header>
 
-<section id="trabalhos" class="active">
-  <button onclick="trabalharestabulos()">Trabalhar nos estabulos</button>
-  <button onclick="roubar()">Roubar andarilho</button>
-  <button onclick="assaltardiligencia()">Assaltar diligência</button>
-  <button onclick="assaltartrem()">Assaltar trem</button>
-</section>
+  <header>
+    <button onclick="abrir('trabalhos')">Trabalhos</button>
+    <button onclick="abrir('saloon')">Saloon</button>
+    <button onclick="abrir('banco')">Banco</button>
+    <button onclick="abrir('xerife')">Xerife</button>
+    <button onclick="abrir('loja')">Loja</button>
+  </header>
 
-<section id="saloon">
-  <button onclick="beber()">🍺 Cerveja ($15)</button>
-  <button onclick="leite()">🥛 Leite ($5)</button>
-  <button onclick="cafe()">☕ Café preto ($20)</button>
+  <section id="trabalhos" class="active">
+    <button onclick="trabalharestabulos()">Trabalhar nos estábulos</button>
+    <button onclick="roubar()">Roubar andarilho</button>
+    <button onclick="assaltardiligencia()">Assaltar diligência</button>
+    <button onclick="assaltartrem()">Assaltar trem</button>
+  </section>
 
-</section>
+  <section id="saloon">
+    <button onclick="beber()">🍺 Cerveja ($15)</button>
+    <button onclick="leite()">🥛 Leite ($5)</button>
+    <button onclick="cafe()">☕ Café preto ($20)</button>
+  </section>
 
-<section id="banco">
-  <input id="valorBanco" type="number" placeholder="Valor">
-  <button onclick="depositar()">Depositar</button>
-  <button onclick="sacar()">Sacar</button>
-</section>
+  <section id="banco">
+    <input id="valorBanco" type="number" placeholder="Valor">
+    <button onclick="depositar()">Depositar</button>
+    <button onclick="sacar()">Sacar</button>
+  </section>
 
-<section id="xerife">
-  <button id="btnSuborno" onclick="subornoPreso()">
-    💰 Subornar prisão ($25)
-  </button>
-</section>
+  <section id="xerife">
+    <button id="btnSuborno" onclick="subornoPreso()"></button>
+  </section>
 
+  <section id="loja">
+    <button onclick="comprarEquip('arma')">🔫 Arma ($50)</button>
+    <button onclick="comprarEquip('bota')">👢 Botas ($30)</button>
+    <button onclick="comprarEquip('chapeu')">🎩 Chapéu ($20)</button>
+  </section>
 
-<section id="loja">
-  <button onclick="comprarEquip('arma')">🔫 Arma ($50)</button>
-  <button onclick="comprarEquip('bota')">👢 Botas ($30)</button>
-  <button onclick="comprarEquip('chapeu')">🎩 Chapéu ($20)</button>
-</section>
+  <div id="log"></div>
 
-<div id="log"></div>
-
-<footer> © 2026 Palo Seco - Jogo de gerenciamento Velho Oeste em desenvolvimento por Dan Leonardi </footer>
+  <footer>
+    © 2026 Palo Seco - Jogo de gerenciamento Velho Oeste em desenvolvimento por Dan Leonardi
+  </footer>
 </main>
 
-<script>
-/* ===== ESTADO ===== */
-let logs=[];
-let player={
-  nivel:1,xp:0,xpProx:20,
-  energia:100,bebedeira:0,
-  dinheiro:1,banco:0,
-  status:"Livre",presoAte:0,
-  equip:{arma:false,bota:false,chapeu:false}
-};
-
-const logDiv=document.getElementById("log");
-
-/* ===== UTIL ===== */
-function log(t){
-  logs.unshift(t);
-  if(logs.length > 40) logs.pop();
-
-  logDiv.innerHTML = logs
-    .map(l => `<div class="log-line">${l}</div>`)
-    .join("");
-}
-
-function random(min, max){
-  return Math.floor(Math.random() * (max - min + 1)) + min;
-}
-
-
-
-function semDinheiro(){ log("💸 Você não tem dinheiro suficiente."); }
-
-function abrir(id){
-  document.querySelectorAll("section").forEach(s=>s.classList.remove("active"));
-  document.getElementById(id).classList.add("active");
-}
-function abrirPainel(id){
-  document.querySelectorAll(".panel").forEach(p=>p.classList.remove("active"));
-  document.getElementById(id).classList.add("active");
-}
-
-/* ===== LEVEL ===== */
-function ganharXP(v){
-  player.xp += v;
-
-  while(player.xp >= player.xpProx){
-    player.xp -= player.xpProx;
-
-    const tituloAnterior = obterTitulo();
-
-    player.nivel++;
-    player.xpProx = Math.floor(player.xpProx * 1.5);
-
-    log("⭐ Subiu para o nível " + player.nivel + "!");
-
-    const novoTitulo = obterTitulo();
-    if(novoTitulo !== tituloAnterior){
-      log("🏅 Novo título: " + novoTitulo);
-    }
-  }
-}
-
-
-/* ===== TÍTULO ===== */
-function obterTitulo(){
-  if(player.nivel <= 5) return "Peão";
-  if(player.nivel <= 10) return "Pistoleiro";
-  return "Lenda do Oeste";
-}
-
-
-/* ===== HUD ===== */
-function atualizar(){
-  nivel.textContent=player.nivel;
-  xp.textContent=player.xp;
-  xpProx.textContent=player.xpProx;
-  energia.textContent=player.energia;
-  bebedeira.textContent=player.bebedeira;
-  dinheiro.textContent=player.dinheiro;
-  bancoValor.textContent=player.banco;
-  statusTxt.textContent=player.status;
-
-  titulo.textContent = obterTitulo();
-  nivel.textContent = player.nivel;
-
-
-  barEnergia.style.width=player.energia+"%";
-  barBebedeira.style.width=player.bebedeira+"%";
-  barXP.style.width=(player.xp/player.xpProx*100)+"%";
-
-  eqArma.textContent=player.equip.arma?"Equipada":"Nenhuma";
-  eqBota.textContent=player.equip.bota?"Equipada":"Nenhuma";
-  eqChapeu.textContent=player.equip.chapeu?"Equipado":"Nenhum";
-
-  if(player.status==="Preso"){
-    let t=Math.max(0,Math.floor((player.presoAte-Date.now())/1000));
-    prisao.textContent="⏳ Preso: "+t+"s";
-    if(t<=0){
-      player.status="Livre";
-      prisao.textContent="";
-      log("🔓 Você foi solto.");
-    }
-  }else prisao.textContent="";
-
-  // Atualiza valor do suborno no botão
-const btn = document.getElementById("btnSuborno");
-if(btn){
-  const custoBase = 25;
-  const custoFinal = custoBase * player.nivel;
-  btn.textContent = "💰 Subornar prisão ($"+custoFinal+")";
-}
-
-const avatar = document.getElementById("avatarImg");
-
-if(player.status === "Preso"){
-  avatar.src = "IMG/avatar-preso.png";
-}else{
-  avatar.src = "IMG/avatar.png";
-}
-
-
-}
-
-/* ===== AÇÕES ===== */
-function podeAgir(c=0){
-  if(player.status==="Preso"){log("🔒 Você está preso.");return false;}
-  if(player.energia<c){log("😴 Energia insuficiente.");return false;}
-  return true;
-}
-
-function trabalharestabulos(){
-  if(!podeAgir(5)) return;
-
-  player.energia -= 5;
-  if(falhaPorBebedeira()){
-    return;
-  }
-  player.dinheiro += 5;
-  ganharXP(5);
-  log("🔨 Trabalhou nos estábulos.");
-}
-
-function roubar(){
-  if(!podeAgir(10)) return;
-  player.energia -= 10;
-  let chancePrisao = 0.4;
-  // Bebedeira alta aumenta risco
-  if(player.bebedeira > 50) chancePrisao += 0.2;
-  if(Math.random() < chancePrisao){
-    preso();
-    return;
-  }
-  const ganho = random(3, 15);
-  player.dinheiro += ganho;
-  ganharXP(10);
-  log("🕵️ Roubou um andarilho e conseguiu $" + ganho + ".");
-}
-
-
-
-function assaltardiligencia(){
-  if(!podeAgir(20)) return;
-  player.energia -= 20;
-  let chancePrisao = 0.7;
-  if(player.bebedeira > 50) chancePrisao += 0.2;
-  if(Math.random() < chancePrisao){
-    preso();
-    return;
-  }
-  const ganho = random(20, 60);
-  player.dinheiro += ganho;
-  ganharXP(20);
-  log("🚚 Diligência assaltada! Lucro: $" + ganho + ".");
-}
-
-
-function assaltartrem(){
-  if(!podeAgir(30)) return;
-  player.energia -= 30;
-  let chancePrisao = 0.9;
-  if(player.bebedeira > 50) chancePrisao += 0.1;
-  if(Math.random() < chancePrisao){
-    preso();
-    return;
-  }
-  const ganho = random(80, 250);
-  player.dinheiro += ganho;
-  ganharXP(40);
-  log("🚂 Trem assaltado! Botim: $" + ganho + "!");
-}
-
-
-function falhaPorBebedeira(chance = 0.4){
-  if(player.bebedeira > 50 && Math.random() < chance){
-    log("💤 Você dormiu no trabalho por conta da bebedeira.");
-    return true;
-  }
-  return false;
-}
-
-/* ===== SISTEMAS ===== */
-
-function estaPreso(){
-  if(player.status === "Preso"){
-    log("🔒 Você está preso. A única saída é subornar o xerife.");
-    return true;
-  }
-  return false;
-}
-
-function preso(){
-  player.status = "Preso";
-  const tempoBase = 30000;
-  const tempoFinal = tempoBase * player.nivel;
-  player.presoAte = Date.now() + tempoFinal;
-  const dinheiroPerdido = player.dinheiro;
-  player.dinheiro = 0;
-  log("🚔 Você foi preso!");
-  log("💸 O xerife confisca $" + dinheiroPerdido + ".");
-  log("⏳ Pena: " + (tempoFinal/1000) + " segundos (nível "+player.nivel+")");
-}
-
-
-function subornoPreso(){
-  if(player.status!=="Preso") return;
-
-  const custoBase = 25;
-  const custoFinal = custoBase * player.nivel;
-
-  if(player.dinheiro < custoFinal){
-    log("💰 O xerife cospe no chão.");
-    log("❌ Suborno recusado. Precisa de $"+custoFinal);
-    return;
-  }
-
-  player.dinheiro -= custoFinal;
-  player.status = "Livre";
-  player.presoAte = 0;
-
-  log("🤝 Suborno aceito.");
-  log("💸 Pagou $"+custoFinal+" ao xerife.");
-}
-
-function beber(){
-  if(estaPreso()) return;
-  if(player.dinheiro<15){semDinheiro();return;}
-  player.dinheiro-=15;
-  player.energia=Math.min(100,player.energia+10);
-  player.bebedeira=Math.min(100,player.bebedeira+15);
-  log("🍺 Bebeu cerveja.");
-}
-
-function leite(){
-  if(estaPreso()) return;
-  if(player.dinheiro<5){semDinheiro();return;}
-  player.dinheiro-=5;
-  player.energia=Math.min(100,player.energia+5);
-  player.bebedeira=Math.max(0,player.bebedeira-5);
-  log("🥛 Bebeu leite.");
-}
-
-function cafe(){
-  if(estaPreso()) return;
-  if(player.dinheiro < 10){ semDinheiro(); return; }
-
-  player.dinheiro -= 10;
-
-  let reducaoBebedeira = 20;
-  let ganhoEnergia = 5;
-
-  // Muito bêbado? Café perde efeito
-  if(player.bebedeira > 80){
-    reducaoBebedeira = 10;
-    ganhoEnergia = 2;
-    log("☕ O café mal fez efeito. Você está acabado.");
-  } else {
-    log("☕ Café preto desceu rasgando a garganta.");
-  }
-
-  player.bebedeira = Math.max(0, player.bebedeira - reducaoBebedeira);
-  player.energia = Math.min(100, player.energia + ganhoEnergia);
-}
-
-
-function depositar(){
-  if(estaPreso()) return;
-  let v=+valorBanco.value;
-  if(v>0 && player.dinheiro>=v){
-    player.dinheiro-=v;
-    player.banco+=v;
-    log("🏦 Depositou $"+v);
-  }
-}
-
-function sacar(){
-  let v = +valorBanco.value;
-  if(v > 0 && player.banco >= v){
-    player.banco -= v;
-    player.dinheiro += v;
-    if(player.status === "Preso"){
-      log("🏦 Sacou $" + v + " da conta mesmo estando preso.");
-    }else{
-      log("🏦 Sacou $" + v + ".");
-    }
-  }
-}
-
-
-function comprarEquip(i){
-  if(estaPreso()) return;
-  const p={arma:50,bota:30,chapeu:20};
-  if(player.equip[i]){log("⚠️ Item já equipado.");return;}
-  if(player.dinheiro<p[i]){semDinheiro();return;}
-  player.dinheiro-=p[i];
-  player.equip[i]=true;
-  log("🛠️ Comprou "+i+".");
-}
-
-function modificadorPrisao(){
-  if(player.bebedeira <= 50) return 0;
-
-  // quanto mais bêbado, pior
-  // 51% → +5% | 100% → +30%
-  return Math.min(0.3, (player.bebedeira - 50) / 50 * 0.3);
-}
-
-
-
-/* ===== LOOPS ===== */
-setInterval(atualizar,1000);
-setInterval(()=>{
-  if(player.status==="Livre"){
-    player.energia=Math.min(100,player.energia+1);
-    player.bebedeira=Math.max(0,player.bebedeira-1);
-  }
-},5000);
-
-/* ===== INIT ===== */
-
-log("");
-log("Cuidado.");
-log("Cada passo conta.");
-log("Cada ato pesa.");
-log("");
-log("🌵 Bem vindo.");
-log("");
-atualizar();
-
-</script>
+<script src="JS/script.js"></script>
 </body>
 </html>
+
