Sistema de vida
Sistema de vida para o personagem.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
   </div>
 
   <div id="status" class="panel active">
+    
+
     <div>Nível: <span id="nivel"></span></div>
+
+    <div id="vida"></div>
+  <!-- corações gerados via JS -->
 
     <div>XP: <span id="xp"></span>/<span id="xpProx"></span></div>
     <div class="bar"><div id="barXP" class="fill xp"></div></div>
