--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <button onclick="abrir('banco')">Banco</button>
     <button onclick="abrir('xerife')">Xerife</button>
     <button onclick="abrir('loja')">Loja</button>
+    <button onclick="abrir('farmacia')">🏥 Farmácia</button>
   </header>
 
   <section id="trabalhos" class="active">
@@ -92,6 +93,15 @@
     <button onclick="comprarEquip('bota')">👢 Botas ($30)</button>
     <button onclick="comprarEquip('chapeu')">🎩 Chapéu ($20)</button>
   </section>
+
+  <section id="farmacia">
+  <div class="panel active">
+    <button onclick="curarSimples()">💊 Curativo simples ($25)</button>
+    <!-- espaço para futuros itens -->
+  </div>
+</section>
+
+
 
   <div id="log"></div>
 
