--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
 
 <body>
 
+  <div id="startScreen">
+  <div class="start-box">
+    <h1>PALO SECO</h1>
+    <p>O Velho Oeste não perdoa.</p>
+
+    <input 
+      id="nomeJogador" 
+      type="text" 
+      placeholder="Nome do personagem"
+      maxlength="20"
+    >
+
+    <button onclick="iniciarJogo()">JOGAR</button>
+  </div>
+</div>
+
+
 <aside>
   <div class="avatar">
     <img id="avatarImg" src="img/avatar.png" width="130">
