--- a/index.html
+++ b/index.html
@@ -25,6 +25,23 @@
   </div>
 </div>
 
+<div id="introScreen">
+  <div class="start-box">
+    <h1>PALO SECO</h1>
+
+    <p>
+      Uma cidade esquecida pelo tempo.<br><br>
+      Aqui, o ouro já acabou, a lei é fraca
+      e cada escolha cobra seu preço.<br><br>
+      Sobreviva, trabalhe, trapaceie —
+      ou morra tentando.
+    </p>
+
+    <button onclick="fecharIntro()">Continuar</button>
+  </div>
+</div>
+
+
 <div id="gameOverScreen">
   <div class="start-box">
     <h1>ACABOU PARA VOCÊ!</h1>
