--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
       <div class="bar"><div id="barBebedeira" class="fill drunk"></div></div>
 
       <div>Vício: <span id="vicio"></span>%</div>
-      <div class="bar"><div id="barVicio" class="fill vice"></div></div>
+      <div class="bar"><div id="barVicio" class="fill vice"></div>
+</div>
 
       
       <div>Status: <span id="statusTxt"></span></div>
