Aside para bando
Criado aside para futura implementação do bando.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div id="startScreen">
   <div class="start-box">
-    <h1>PALO SECO</h1>
+    <img src="IMG/logo.png" alt="logo Palo Seco" width="300">
     <p>O Velho Oeste não perdoa.</p>
 
     <input 
@@ -27,7 +27,9 @@
 
 <div id="introScreen">
   <div class="start-box">
-    <h1>PALO SECO</h1>
+
+    <img src="IMG/logo.png" alt="logo Palo Seco" width="300">
+    
 
     <p>
       Uma cidade esquecida pelo tempo.<br><br>
@@ -107,7 +109,7 @@
   </aside>
   
   <main>
-    <h1>PALOSECO</h1>
+    <img id="logomain" src="IMG/logo.png" alt="logo Palo Seco" width="400">
     
     <header>
       <button onclick="abrir('trabalhos')">⚒️ Trabalhos</button>
@@ -230,6 +232,12 @@
     © 2026 Palo Seco - Jogo de gerenciamento Velho Oeste em desenvolvimento por Dan Leonardi
   </footer>
 </main>
+
+<aside id="aside-bando">
+  <h3>📌 Em breve</h3>
+  <p>Este espaço será usado futuramente.</p>
+</aside>
+
 
 <script src="JS/script.js"></script>
 </body>
