--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
       <button onclick="abrir('farmacia')">🏥 Farmácia</button>
       <button onclick="abrir('cassino')">🎰 Cassino</button>
       <button onclick="abrir('mina')">⛏️ Mina</button>
+      <button onclick="abrir('correios')">📬 Correios</button>
     </header>
     
     <section id="trabalhos" class="active">
@@ -158,8 +159,6 @@
   <section id="cassino">
   <input id="apostaValor" type="number" placeholder="Valor da aposta">
 
-  
-  
   <div id="cassinoDisplay" class="cassino-display">
   🍒🍒🍒
 </div>
@@ -225,6 +224,17 @@
 </div>
 
 </section>
+
+<section id="correios" class="panel">
+  <h2>📬 Correios</h2>
+
+  <div id="listaCorreios" class="lista-correios"></div>
+
+  <p id="correiosVazio" class="texto-fraco">
+    Nenhuma mensagem no momento.
+  </p>
+</section>
+
 
   <div id="log"></div>
 
