--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <button onclick="abrir('farmacia')">🏥 Farmácia</button>
       <button onclick="abrir('cassino')">🎰 Cassino</button>
       <button onclick="abrir('mina')">⛏️ Mina</button>
-      <button onclick="abrir('correios')">📬 Correios</button>
+      <button id="btnCorreios" onclick="abrir('correios')">📬 Correios</button>
     </header>
     
     <section id="trabalhos" class="active">
@@ -244,8 +244,8 @@
 </main>
 
 <aside id="aside-bando">
-  <h3>📌 Em breve</h3>
-  <p>Este espaço será usado futuramente.</p>
+  <h3>📌 Em breve, bando</h3>
+  <p>Este espaço será usado pelo bando futuramente.</p>
 </aside>
 
 
